fix overflow of wide items in demo page

--- a/docs/demo.css
+++ b/docs/demo.css
@@ -88,6 +88,7 @@ h3 {
 .post {
   max-width: 600px;
   padding-bottom: 2em;
+  overflow: hidden;
 }
 .post-title {
   font-size: 2em;
